--- a/package.json
+++ b/package.json
@@ -1,61 +1,64 @@
 {
-  "name": "@mojaloop/logging-bc",
-  "version": "0.1.0",
-  "description": "mojaloop logging bounded context.",
-  "license": "Apache-2.0",
-  "homepage": "https://github.com/mojaloop/logging-bc",
-  "private": true,
-  "bugs": {
-    "url": "https://github.com/mojaloop/logging-bc/issues#readme"
-  },
-  "contributors": [
-    "Miguel de Barros <miguel.debarros@modusbox.com>",
-    "Jason Bruwer <jason.bruwer@coil.com>",
-    "Pedro Sousa Barreto <pedrosousabarreto@gmail.com>"
-  ],
-  "scripts": {
-    "prepare": "husky install",
-    "pre_commit_check": "npm run build && npm run lint && npm run test:unit",
-    "start:logging-svc": "npm -w @mojaloop/logging-bc-logging-svc run start",
-    "build": "npm -ws run build",
-    "docker:build": "npm run build && docker build . -t \"mojaloop/logging-bc-logging-svc\"",
-    "watch": "npm -ws --parallel run watch",
-    "clean": "npm run clean:dist; npm run clean:npm",
-    "clean:npm": "rm -Rf node_modules; npm -ws run clean:npm",
-    "clean:dist": "rm -Rf dist; npm -ws run clean:dist",
-    "standard": "yarn run --no-progress --stream lint'",
-    "lint": "npm -ws -p run lint",
-    "lint:fix": "npm -ws -p run lint:fix",
-    "test": "npm run test:unit && npm run test:integration",
-    "test:unit": "npm -ws --if-present run test:unit",
-    "posttest": "npm run coverage:merge && npm run coverage:gen-report",
-    "coverage:merge": "nyc merge ./coverage/ ./coverage/coverage.json",
-    "coverage:gen-report": "nyc report --reporter=lcov --reporter=text --temp-dir=./coverage",
-    "test:integration": "jest",
-    "audit:check": "npm -ws --parallel run audit:check",
-    "dep:check": "ncu -e 2; npm -ws run dep:check",
-    "dep:update": "ncu -e 2 -u; npm -ws run dep:update",
-    "publish:public-types": "npm -w @mojaloop/logging-bc-public-types-lib run npm_publish",
-    "publish:client-lib": "npm -w @mojaloop/logging-bc-client-lib run npm_publish"
-  },
-  "devDependencies": {
-    "@types/jest": "^29.5.8",
-    "@types/node": "^20.4.10",
-    "@typescript-eslint/eslint-plugin": "^6.2.1",
-    "@typescript-eslint/parser": "^6.2.1",
-    "eslint": "^8.46.0",
-    "husky": "^8.0.3",
-    "jest": "^29.6.4",
-    "npm-check-updates": "^16.10.19",
-    "nyc": "^15.1.0",
-    "ts-jest": "^29.1.1",
-    "tslib": "^2.6.2",
-    "typescript": "^5.1.6"
-  },
-  "workspaces": [
-    "packages/public-types-lib",
-    "packages/client-lib",
-    "packages/logging-svc",
-    "packages/*"
-  ]
+    "name": "@mojaloop/logging-bc",
+    "version": "0.5.0",
+    "description": "mojaloop logging bounded context.",
+    "license": "Apache-2.0",
+    "homepage": "https://github.com/mojaloop/logging-bc",
+    "private": true,
+    "bugs": {
+        "url": "https://github.com/mojaloop/logging-bc/issues#readme"
+    },
+    "contributors": [
+        "Miguel de Barros <miguel.debarros@modusbox.com>",
+        "Jason Bruwer <jason.bruwer@coil.com>",
+        "Pedro Sousa Barreto <pedrosousabarreto@gmail.com>"
+    ],
+    "scripts": {
+        "prepare": "husky install",
+        "pre_commit_check": "npm run build && npm run lint && npm run test:unit",
+        "start:logging-svc": "npm -w @mojaloop/logging-bc-logging-svc run start",
+        "build": "npm -ws run build",
+        "docker:build": "npm run build && docker build . -t \"mojaloop/logging-bc-logging-svc\"",
+        "watch": "npm -ws --parallel run watch",
+        "clean": "npm run clean:dist; npm run clean:npm",
+        "clean:npm": "rm -Rf node_modules; npm -ws run clean:npm",
+        "clean:dist": "rm -Rf dist; npm -ws run clean:dist",
+        "standard": "yarn run --no-progress --stream lint'",
+        "lint": "npm -ws -p run lint",
+        "lint:fix": "npm -ws -p run lint:fix",
+        "test": "npm run test:unit && npm run test:integration",
+        "test:unit": "npm -ws --if-present run test:unit",
+        "posttest": "npm run coverage:merge && npm run coverage:gen-report",
+        "coverage:merge": "nyc merge ./coverage/ ./coverage/coverage.json",
+        "coverage:gen-report": "nyc report --reporter=lcov --reporter=text --temp-dir=./coverage",
+        "test:integration": "jest",
+        "audit:check": "npm -ws --parallel run audit:check",
+        "dep:check": "ncu -e 2; npm -ws run dep:check",
+        "dep:update": "ncu -e 2 -u; npm -ws run dep:update",
+        "publish:public-types": "npm -w @mojaloop/logging-bc-public-types-lib run npm_publish",
+        "publish:client-lib": "npm -w @mojaloop/logging-bc-client-lib run npm_publish"
+    },
+    "devDependencies": {
+        "@types/jest": "^29.5.10",
+        "@types/node": "^20.4.10",
+        "@typescript-eslint/eslint-plugin": "^6.2.1",
+        "@typescript-eslint/parser": "^6.2.1",
+        "eslint": "^8.46.0",
+        "husky": "^8.0.3",
+        "jest": "^29.6.4",
+        "npm-check-updates": "^16.10.19",
+        "nyc": "^15.1.0",
+        "ts-jest": "^29.1.1",
+        "tslib": "^2.6.2",
+        "typescript": "^5.1.6"
+    },
+    "workspaces": [
+        "packages/public-types-lib",
+        "packages/client-lib",
+        "packages/logging-svc",
+        "packages/*"
+    ],
+    "engines": {
+        "node": ">=20.10.0"
+    }
 }
