--- a/packages/client-lib/package.json
+++ b/packages/client-lib/package.json
@@ -1,50 +1,53 @@
 {
-  "name": "@mojaloop/logging-bc-client-lib",
-  "version": "0.1.30",
-  "description": "Mojaloop logging bounded context client library",
-  "license": "Apache-2.0",
-  "homepage": "https://github.com/mojaloop/logging-bc/tree/main/packages/client-lib",
-  "bugs": {
-    "url": "https://github.com/mojaloop/logging-bc/issues#readme"
-  },
-  "contributors": [
-    "Miguel de Barros <miguel.debarros@modusbox.com>",
-    "Jason Bruwer <jason.bruwer@coil.com>",
-    "Pedro Sousa Barreto <pedrosousabarreto@gmail.com>"
-  ],
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "files": [
-    "/dist"
-  ],
-  "scripts": {
-    "start": "node dist/application/index.js",
-    "build": "tsc",
-    "watch": "tsc -w",
-    "clean": "npm run clean:npm; npm run clean:dist",
-    "clean:dist": "rm -rf dist",
-    "clean:npm": "rm -rf node_modules",
-    "prestart": "npm run build",
-    "pretest": "npm run build",
-    "standard": "npm run lint",
-    "lint": "npx eslint ./src",
-    "lint:fix": "eslint ./src --fix",
-    "test:unit": "jest --passWithNoTests --testMatch **/test/unit/**/*.test.ts",
-    "audit:check": "npm npm audit",
-    "dep:check": "ncu -e 2",
-    "dep:update": "ncu -u"
-  },
-  "dependencies": {
-    "@mojaloop/logging-bc-public-types-lib": "~0.1.22",
-    "@mojaloop/platform-shared-lib-nodejs-kafka-client-lib": "~0.3.71",
-    "winston": "~3.11.0"
-  },
-  "devDependencies": {
-    "@mojaloop/platform-shared-lib-messaging-types-lib": "~0.2.103",
-    "eslint": "^8.53.0",
-    "jest": "^29.7.0",
-    "npm-check-updates": "^16.14.6",
-    "ts-jest": "^29.1.1",
-    "typescript": "^4.6.4"
-  }
+    "name": "@mojaloop/logging-bc-client-lib",
+    "version": "0.5.0",
+    "description": "Mojaloop logging bounded context client library",
+    "license": "Apache-2.0",
+    "homepage": "https://github.com/mojaloop/logging-bc/tree/main/packages/client-lib",
+    "bugs": {
+        "url": "https://github.com/mojaloop/logging-bc/issues#readme"
+    },
+    "contributors": [
+        "Miguel de Barros <miguel.debarros@modusbox.com>",
+        "Jason Bruwer <jason.bruwer@coil.com>",
+        "Pedro Sousa Barreto <pedrosousabarreto@gmail.com>"
+    ],
+    "main": "./dist/index.js",
+    "types": "./dist/index.d.ts",
+    "files": [
+        "/dist"
+    ],
+    "scripts": {
+        "start": "node dist/application/index.js",
+        "build": "tsc",
+        "watch": "tsc -w",
+        "clean": "npm run clean:npm; npm run clean:dist",
+        "clean:dist": "rm -rf dist",
+        "clean:npm": "rm -rf node_modules",
+        "prestart": "npm run build",
+        "pretest": "npm run build",
+        "standard": "npm run lint",
+        "lint": "npx eslint ./src",
+        "lint:fix": "eslint ./src --fix",
+        "test:unit": "jest --passWithNoTests --testMatch **/test/unit/**/*.test.ts",
+        "audit:check": "npm npm audit",
+        "dep:check": "ncu -e 2",
+        "dep:update": "ncu -u"
+    },
+    "dependencies": {
+        "@mojaloop/logging-bc-public-types-lib": "~0.5.0",
+        "@mojaloop/platform-shared-lib-nodejs-kafka-client-lib": "~0.5.1",
+        "winston": "~3.11.0"
+    },
+    "devDependencies": {
+        "@mojaloop/platform-shared-lib-messaging-types-lib": "~0.5.2",
+        "eslint": "^8.55.0",
+        "jest": "^29.7.0",
+        "npm-check-updates": "^16.14.11",
+        "ts-jest": "^29.1.1",
+        "typescript": "^4.6.4"
+    },
+    "engines": {
+        "node": ">=20.10.0"
+    }
 }
