--- a/packages/logging-svc/package.json
+++ b/packages/logging-svc/package.json
@@ -1,55 +1,57 @@
 {
-  "name": "@mojaloop/logging-bc-logging-svc",
-  "version": "0.3.4",
-  "description": "Mojaloop Logging Service",
-  "license": "Apache-2.0",
-  "homepage": "https://github.com/mojaloop/logging-bc/tree/main/packages/logging-svc",
-  "bugs": {
-    "url": "https://github.com/mojaloop/logging-bc/issues#readme"
-  },
-  "contributors": [
-    "Miguel de Barros <miguel.debarros@modusbox.com>",
-    "Jason Bruwer <jason.bruwer@coil.com>",
-    "Pedro Sousa Barreto <pedrosousabarreto@gmail.com>"
-  ],
-  "private": true,
-  "mojaloop": {
-    "publish_to_dockerhub": true
-  },
-  "main": "./dist/application/index.js",
-  "files": [
-    "/dist"
-  ],
-  "scripts": {
-    "start": "npm run service",
-    "start:dev": "npm run build && npm run service",
-    "service": "node dist/application/index.js",
-    "build": "tsc",
-    "watch": "tsc -w",
-    "clean": "npm run clean:npm; npm run clean:dist",
-    "clean:dist": "rm -rf dist",
-    "clean:npm": "rm -rf node_modules",
-    "pretest": "npm run build",
-    "standard": "npm run lint",
-    "lint": "eslint ./src",
-    "lint:fix": "eslint ./src --fix",
-    "test:unit": "jest --passWithNoTests --testMatch **/test/unit/**/*.test.ts",
-    "audit:check": "npm npm audit",
-    "dep:check": "ncu -e 2",
-    "dep:update": "ncu -u"
-  },
-  "dependencies": {
-    "@elastic/elasticsearch": "^8.10.0",
-    "@mojaloop/logging-bc-public-types-lib": "*",
-    "@mojaloop/platform-shared-lib-nodejs-kafka-client-lib": "~0.3.71"
-  },
-  "devDependencies": {
-    "@elastic/elasticsearch": "^8.10.0",
-    "@mojaloop/platform-shared-lib-messaging-types-lib": "~0.2.103",
-    "eslint": "^8.53.0",
-    "jest": "^29.7.0",
-    "npm-check-updates": "^16.14.6",
-    "ts-jest": "^29.1.1",
-    "typescript": "^4.6.4"
-  }
+    "name": "@mojaloop/logging-bc-logging-svc",
+    "version": "0.5.0",
+    "description": "Mojaloop Logging Service",
+    "license": "Apache-2.0",
+    "homepage": "https://github.com/mojaloop/logging-bc/tree/main/packages/logging-svc",
+    "bugs": {
+        "url": "https://github.com/mojaloop/logging-bc/issues#readme"
+    },
+    "contributors": [
+        "Miguel de Barros <miguel.debarros@modusbox.com>",
+        "Jason Bruwer <jason.bruwer@coil.com>",
+        "Pedro Sousa Barreto <pedrosousabarreto@gmail.com>"
+    ],
+    "private": true,
+    "mojaloop": {
+        "publish_to_dockerhub": true
+    },
+    "main": "./dist/application/index.js",
+    "files": [
+        "/dist"
+    ],
+    "scripts": {
+        "start": "npm run service",
+        "start:dev": "npm run build && npm run service",
+        "service": "node dist/application/index.js",
+        "build": "tsc",
+        "watch": "tsc -w",
+        "clean": "npm run clean:npm; npm run clean:dist",
+        "clean:dist": "rm -rf dist",
+        "clean:npm": "rm -rf node_modules",
+        "pretest": "npm run build",
+        "standard": "npm run lint",
+        "lint": "eslint ./src",
+        "lint:fix": "eslint ./src --fix",
+        "test:unit": "jest --passWithNoTests --testMatch **/test/unit/**/*.test.ts",
+        "audit:check": "npm npm audit",
+        "dep:check": "ncu -e 2",
+        "dep:update": "ncu -u"
+    },
+    "dependencies": {
+        "@elastic/elasticsearch": "^8.10.0",
+        "@mojaloop/logging-bc-public-types-lib": "*",
+        "@mojaloop/platform-shared-lib-nodejs-kafka-client-lib": "~0.5.1",
+        "@mojaloop/platform-shared-lib-messaging-types-lib": "~0.5.2"
+    },
+    "devDependencies": {
+        "eslint": "^8.55.0",
+        "jest": "^29.7.0",
+        "npm-check-updates": "^16.14.11",
+        "ts-jest": "^29.1.1",
+        "typescript": "^4.6.4"
+    },
+    "engines": {
+        "node": ">=20.10.0"
+    }
 }
