--- a/packages/public-types-lib/package.json
+++ b/packages/public-types-lib/package.json
@@ -1,45 +1,48 @@
 {
-  "name": "@mojaloop/logging-bc-public-types-lib",
-  "version": "0.1.23",
-  "description": "Mojaloop logging bounded context public types lib",
-  "license": "Apache-2.0",
-  "homepage": "https://github.com/mojaloop/logging-bc/tree/main/packages/public-types-lib",
-  "bugs": {
-    "url": "https://github.com/mojaloop/logging-bc/issues#readme"
-  },
-  "contributors": [
-    "Miguel de Barros <miguel.debarros@modusbox.com>",
-    "Jason Bruwer <jason.bruwer@coil.com>",
-    "Pedro Sousa Barreto <pedrosousabarreto@gmail.com>"
-  ],
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "files": [
-    "/dist"
-  ],
-  "scripts": {
-    "start": "npm run service",
-    "service": "tsc && node dist/index.js --config ../../.env",
-    "build": "tsc",
-    "watch": "tsc -w",
-    "clean": "npm run clean:npm; npm run clean:dist",
-    "clean:dist": "rm -rf dist",
-    "clean:npm": "rm -rf node_modules",
-    "pretest": "npm run build",
-    "standard": "npm run lint",
-    "lint": "eslint ./src",
-    "lint:fix": "eslint ./src --fix",
-    "test:unit": "jest --passWithNoTests --testMatch **/test/unit/**/*.test.ts",
-    "audit:check": "npm npm audit",
-    "dep:check": "ncu -e 2",
-    "dep:update": "ncu -u",
-    "npm_publish": "npm version patch && npm publish --tag=latest --access public"
-  },
-  "devDependencies": {
-    "eslint": "^8.53.0",
-    "jest": "^29.7.0",
-    "npm-check-updates": "^16.14.6",
-    "ts-jest": "^29.1.1",
-    "typescript": "^4.6.4"
-  }
+    "name": "@mojaloop/logging-bc-public-types-lib",
+    "version": "0.5.0",
+    "description": "Mojaloop logging bounded context public types lib",
+    "license": "Apache-2.0",
+    "homepage": "https://github.com/mojaloop/logging-bc/tree/main/packages/public-types-lib",
+    "bugs": {
+        "url": "https://github.com/mojaloop/logging-bc/issues#readme"
+    },
+    "contributors": [
+        "Miguel de Barros <miguel.debarros@modusbox.com>",
+        "Jason Bruwer <jason.bruwer@coil.com>",
+        "Pedro Sousa Barreto <pedrosousabarreto@gmail.com>"
+    ],
+    "main": "./dist/index.js",
+    "types": "./dist/index.d.ts",
+    "files": [
+        "/dist"
+    ],
+    "scripts": {
+        "start": "npm run service",
+        "service": "tsc && node dist/index.js --config ../../.env",
+        "build": "tsc",
+        "watch": "tsc -w",
+        "clean": "npm run clean:npm; npm run clean:dist",
+        "clean:dist": "rm -rf dist",
+        "clean:npm": "rm -rf node_modules",
+        "pretest": "npm run build",
+        "standard": "npm run lint",
+        "lint": "eslint ./src",
+        "lint:fix": "eslint ./src --fix",
+        "test:unit": "jest --passWithNoTests --testMatch **/test/unit/**/*.test.ts",
+        "audit:check": "npm npm audit",
+        "dep:check": "ncu -e 2",
+        "dep:update": "ncu -u",
+        "npm_publish": "npm version patch && npm publish --tag=latest --access public"
+    },
+    "devDependencies": {
+        "eslint": "^8.55.0",
+        "jest": "^29.7.0",
+        "npm-check-updates": "^16.14.11",
+        "ts-jest": "^29.1.1",
+        "typescript": "^4.6.4"
+    },
+    "engines": {
+        "node": ">=20.10.0"
+    }
 }
