--- a/packages/client-lib/package.json
+++ b/packages/client-lib/package.json
@@ -27,8 +27,8 @@
         "prestart": "npm run build",
         "pretest": "npm run build",
         "standard": "npm run lint",
-        "lint": "npx eslint ./src -c ../../eslint.config.js",
-        "lint:fix": "eslint ./src -c ../../eslint.config.js --fix",
+        "lint": "npx eslint ./src",
+        "lint:fix": "eslint ./src --fix",
         "test:unit": "jest --passWithNoTests --testMatch **/test/unit/**/*.test.ts",
         "audit:check": "npm npm audit",
         "dep:check": "ncu -e 2",
