--- a/packages/logging-svc/package.json
+++ b/packages/logging-svc/package.json
@@ -31,8 +31,8 @@
         "clean:npm": "rm -rf node_modules",
         "pretest": "npm run build",
         "standard": "npm run lint",
-        "lint": "eslint ./src -c ../../eslint.config.js",
-        "lint:fix": "eslint ./src -c ../../eslint.config.js --fix",
+        "lint": "eslint ./src",
+        "lint:fix": "eslint ./src --fix",
         "test:unit": "jest --passWithNoTests --testMatch **/test/unit/**/*.test.ts",
         "audit:check": "npm npm audit",
         "dep:check": "ncu -e 2",
